crates/tui/tests/storybook/snapshots/app_dialog_permission__notebook_edit_permission_dialog_insert_cell.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* edit_notebook insert.ipynb                                           14:37:03






────────────────────────────────────────────────────────────────────────────────
 edit_notebook: insert.ipynb
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
insert cell 1 [code]
 1   import numpy as np
 2   x = np.arange(10)
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow edit_notebook for this session
  4. allow edit_notebook in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
