crates/tui/tests/storybook/snapshots/app_dialog_permission__notebook_edit_permission_dialog_with_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* edit_notebook analysis.ipynb                                         14:37:03













────────────────────────────────────────────────────────────────────────────────
 edit_notebook: analysis.ipynb
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
replace cell 1 [code] id=load
 3 + print(df.head())
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow edit_notebook for this session
  4. allow edit_notebook in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
