crates/tui/tests/storybook/snapshots/app_dialog_permission__notebook_edit_permission_dialog_with_diff.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 28
  0   0   1 fg=AnsiValue(208)
  0   1  14 attrs=dim
  0  69  10 attrs=dim
 14   0  80 fg=AnsiValue(208)
 15   1  13 fg=AnsiValue(208)
 16   0  80 fg=AnsiValue(244)
 17   0  29 attrs=dim
 18   0   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 18   3   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 18   5   5 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
 18  10  11 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 18  21  58 bg=Rgb { r: 20, g: 50, b: 20 }
 19   0  80 fg=AnsiValue(244)
 20   1   6 attrs=dim
 21   0   1 bg=AnsiValue(237)
 21   1   1 fg=Black bg=White
 21   2   3 bg=AnsiValue(237) attrs=dim
 21   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 21  15  65 bg=AnsiValue(237)
 22   1   4 attrs=dim
 23   1   4 attrs=dim
 24   1   4 attrs=dim
 26   2  26 attrs=dim
 27   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 27  10  64 bg=AnsiValue(233)
 27  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
