crates/tui/tests/storybook/snapshots/app_dialog_permission__permission_request_deferred_while_typing.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* bash ls -la /tmp/foo                                                 14:37:03









─ ✿ working… ───────────────────────────────────────────────────────────────────
 Continue drafting this response
────────────────────────────────────────────────────────────────────────────────
 ○ normal  permission pending                                          1:32 100%
