crates/tui/tests/storybook/snapshots/app_dialog_permission__read_process_output_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* read_process_output 4242                                   14:37:03






──────────────────────────────────────────────────────────────────────
 read_process_output: 4242

 Allow?
  1. allow once
  2. deny
  3. allow read_process_output for this session
  4. allow read_process_output in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
