crates/tui/tests/storybook/snapshots/app_dialog_permission__smelt_reload_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* smelt_reload schedule end-of-turn reload                   14:37:03






──────────────────────────────────────────────────────────────────────
 smelt_reload: schedule end-of-turn reload

 Allow?
  1. allow once
  2. deny
  3. allow smelt_reload for this session
  4. allow smelt_reload in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
