crates/tui/tests/storybook/snapshots/app_dialog_permission__stop_process_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* stop_process 4242                                          14:37:03






──────────────────────────────────────────────────────────────────────
 stop_process: 4242

 Allow?
  1. allow once
  2. deny
  3. allow stop_process for this session
  4. allow stop_process in workspace ~/cwd

  press tab to add a reason…
 ○ normal                                                       1:1 0%
