crates/tui/tests/storybook/snapshots/app_dialog_permission__switch_cwd_outside_workspace_permission_dialog.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* switch_cwd /tmp/electronics                                          14:37:03










────────────────────────────────────────────────────────────────────────────────
 switch_cwd: /tmp/electronics

 Allow?
  1. allow once
  2. deny
  3. allow /tmp/electronics for this session
  4. allow /tmp/electronics in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
